# dockloader

./: .gitattributes  .gitignore  .pylintrc  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: config-checker.yml  python-package.yml  transport.yml
cfgs/: docker.io
cfgs/adguard/: adguardhome
cfgs/adrianschubek/: dir-browser
cfgs/dannyben/: madness
cfgs/filegator/: filegator
cfgs/gitea/: gitea
cfgs/gollumwiki/: gollum
cfgs/ixsystems/: truecommand
cfgs/jc21/: nginx-proxy-manager
cfgs/jgraph/: drawio
cfgs/linuxserver/: calibre  calibre-web
cfgs/liwei2633/: gopeed
cfgs/ltbproject/: self-service-password
cfgs/mingzhebaosheng/: all.cfg  directory-lister  directory-lister.cfg
cfgs/openvpn/: openvpn-as
cfgs/osixia/: openldap  phpldapadmin
cfgs/photoprism/: photoprism
cfgs/pymumu/: smartdns
cfgs/rclone/: rclone
cfgs/tensorchord/: pgvecto-rs
dockloader/: __init__.py  attribute.py  client.py  command.py  config.py  parser.py
dockloader/cmds/: __init__.py  config.py  images.py
dockloader/dockhub/: __init__.py  tags.py
pkgs/: dockloader-0.1a1-py2.py3-none-any.whl  dockloader-0.1a11-py2.py3-none-any.whl  dockloader-0.1a12-py2.py3-none-any.whl  dockloader-0.1a13-py2.py3-none-any.whl  dockloader-0.1a15-py2.py3-none-any.whl  dockloader-0.1a17-py2.py3-none-any.whl  dockloader-0.1a3-py2.py3-none-any.whl  dockloader-0.1a5-py2.py3-none-any.whl  dockloader-0.1a6-py2.py3-none-any.whl  dockloader-0.1a7-py2.py3-none-any.whl  dockloader-0.1a8-py2.py3-none-any.whl
scripts/: config-diff.py
(+3 files in other folders)
