[metadata]
keywords = docker, podman
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.10

[options.entry_points]
console_scripts =
    dockloader = dockloader.command:main
